fixed align of under construction text at the bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ p.NotReady {
   font-size: larger;
   font-family: monospace;
   font-weight: 800;
+  text-align: center;
 }
 
 section {
